PokemonPackage/main/default/objects/Team__c/fields/Pokemon_1__c.field-meta.xml
<CustomField>
    <fullName>Pokemon_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pokemon 1</label>
    <referenceTo>Pokemon__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
</CustomField>