PokemonPackage/main/default/objects/Team__c/fields/Pokemon_2__c.field-meta.xml
<CustomField>
    <fullName>Pokemon_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pokemon 2</label>
    <referenceTo>Pokemon__c</referenceTo>
    <relationshipLabel>Teams (Pokemon 2)</relationshipLabel>
    <relationshipName>Teams1</relationshipName>
    <type>Lookup</type>
</CustomField>