PokemonPackage/main/default/objects/Team__c/fields/Pokemon_3__c.field-meta.xml
<CustomField>
    <fullName>Pokemon_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pokemon 3</label>
    <referenceTo>Pokemon__c</referenceTo>
    <relationshipLabel>Teams (Pokemon 3)</relationshipLabel>
    <relationshipName>Teams2</relationshipName>
    <type>Lookup</type>
</CustomField>