PokemonPackage/main/default/objects/Team__c/fields/Pokemon_Can_Be_Added__c.field-meta.xml
<CustomField>
    <fullName>Pokemon_Can_Be_Added__c</fullName>
    <label>Pokemon Can Be Added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>