PokemonPackage/main/default/objects/Team__c/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Queue?</label>
    <type>Checkbox</type>
</CustomField>