PokemonPackage/main/default/objects/Team__c/fields/Team_Damage_Rating__c.field-meta.xml
<CustomField>
    <fullName>Team_Damage_Rating__c</fullName>
    <formula>Pokemon_1__r.General_Damage__c +  Pokemon_2__r.General_Damage__c +  Pokemon_3__r.General_Damage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Damage Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>