PokemonPackage/main/default/objects/Team__c/validationRules/Cannot_have_the_same_pokemon.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_have_the_same_pokemon</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Pokemon_1__c == Pokemon_2__c,Pokemon_1__c == Pokemon_3__c,
Pokemon_2__c == Pokemon_3__c)</errorConditionFormula>
    <errorMessage>You cannot use the same pokemon for two positions</errorMessage>
</ValidationRule>